--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 
     </div>
     <h3><ol>Descripcion</ol></h3>
-    <li></li>
+    <li>los crecientes conflictos morales creados por Ellie en su implacable búsqueda de venganza. El ciclo de violencia que deja a 
+        su paso desafiará tus nociones del bien y del mal, de correcto e incorrecto, de héroe y villano.</li>
     <h3><ol>Informacion del estudiante</ol></h3>
     <li>Nombre: Esteban Villalobos Meriño</li>
     <li>cursa cuarto semestre</li>
